--- a/Base - V1/Properties/Resources.resx
+++ b/Base - V1/Properties/Resources.resx
@@ -127,4 +127,10 @@
   <data name="hogar1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\hogar1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="dog-cat" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\dog-cat.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
