--- a/Base - V1/Forms/Menu.resx
+++ b/Base - V1/Forms/Menu.resx
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!--
-    Microsoft ResX Schema 
+    Microsoft ResX Schema
 
     Version 2.0
 
@@ -48,7 +48,7 @@
     value   : The object must be serialized with
             : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
             : and then encoded with base64 encoding.
-    
+
     mimetype: application/x-microsoft.net.object.soap.base64
     value   : The object must be serialized with
             : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
@@ -118,10 +118,22 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="pictureBox2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        vAAADrwBlbxySQAAAWtJREFUOE+Nkr1KA1EQhS0sJIiFpYWFpLKS1GIhFpIHkFQiKfbuH3mCvICkSCUW
+        PkGwSBEsrKxSpvYZLESCpJAQ1u/szrK7ZhM8cNh7z5yZO3fu7pThnDv3PO8ZfsAV/IQT9LZZ6hFF0S6m
+        B8zJJhIfBUGwZylVlJJ/WA983z+N47jBt8m+j76w+NhSCmBQ23nyFUnHfIfsX+ET6zPYYj2Xj3XHUjMg
+        jiygk3XiI7yBF/AWvsBr2JMPTi01A4IGlqhtZnFgcgXELrn/IT4Ndsn1ilmYmOjOJm0Evi95KXZkUirq
+        qdRB06RahGG4j0+Hrei0OAxhogLcsW9SLYjfyQdnJmUg0LbAN+uWyRXQ3QnxdFZ4PJMLEEhfAs4x9DQw
+        6WqbfTdPFtkP0qQy9IcRHOcmqLtqYOmA/5Ii95ZaBYEOhilcmlkFZug+3zfTthcR9M56qvK02Tdqimwd
+        /Bpqirxb6P+wInr6hXOu+wuTWgxGTZ3Z9QAAAABJRU5ErkJggg==
+</value>
+  </data>
   <data name="Btn6.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        vgAADr4B6kKxwAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAHlSURBVEhLrZZL
+        vAAADrwBlbxySQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAHlSURBVEhLrZZL
         S8NAEMcHxReinsUP40mqZ9GexAciXqoIoqJuElDqA7+AID7Qqx+lPQmKB+upRS/1omRX6Dq7mdpNsmmb
         6h9+TTozO5NkdyeBtrT3NQYO/0AkUYEtOUTefxATC0Zyws+QN6UcnsWEyzAju8mCNv8iXoAfkhfAk70Y
         s45MkSVBTKziwBolKAD7Hg+u3n8nm0kJGJ8Fz5/E8yeyCWSaskXkiDl01pP/BaGLxuTyI0twZzB/jbIa
@@ -136,7 +148,7 @@
   <data name="Btn2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        vgAADr4B6kKxwAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAHWSURBVEhLrZW/
+        vAAADrwBlbxySQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAHWSURBVEhLrZW/
         LwRBFMdHQSMkGkFCxK9KVKIREnEqotEqCLlEj3Ds7HTOH0ArEkoNifgbVCrxF4gEiQtn58056827EXt7
         c3u7G9/kk8y8fe+7d29237LYEn47E2q8Aq7/TUKOMAcuGAeF+AZFsX05bLJSSpSm0awQMA5ToJxUEu+d
         aPAaMrTxQrmJ5cKhxaweeVOVQBweQiZR3JuqBOLghUyi8ExVAune2s0syGdTlUAcrmuN6uDAlalKICEX
@@ -151,7 +163,7 @@
   <data name="Btn1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        vgAADr4B6kKxwAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAFZSURBVEhLtZS/
+        vAAADrwBlbxySQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAFZSURBVEhLtZS/
         SscwEMezCj6CT+Guk6ODi/gObk6i2DSCi0/iIriIi4KLk0/goPwGQRH/TCq9/JB6d0naK6ap0PTgU+5P
         e98m11QpDfWkRJM5wcvDpExv2l5NCi4j7NcncjrAsydWk1CvZgZB4N6vqd80nDNDRr16BQo4Q/+joYRD
         VdhrrjkBi7wN8IP0CdhL9GkbKLfHORIhcwJ3+BIHSTS8++ejK9hXO/UCxpscl3CM/iP7LICDM99LSTTM
