--- a/Base - V1/Forms/ExpNuevaConsulta.resx
+++ b/Base - V1/Forms/ExpNuevaConsulta.resx
@@ -117,4 +117,104 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btnMin1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        vAAADrwBlbxySQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAABaSURBVFhH7dKx
+        DYBADATBbQ1oCEQHH1EogjJADpygj/0EO9JFDs6yDJIk/cQCNOAoSnTNWb4Dz6BsscDdGVQlurk6g6qc
+        sUCc4Tuoypp/EA9R/YRTlkuSNNQL2PGblsDjKP0AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="btnMin2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        vAAADrwBlbxySQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAABaSURBVFhH7dKx
+        DYBADATBbQ1oCEQHH1EogjJADpygj/0EO9JFDs6yDJIk/cQCNOAoSnTNWb4Dz6BsscDdGVQlurk6g6qc
+        sUCc4Tuoypp/EA9R/YRTlkuSNNQL2PGblsDjKP0AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="btnMin10.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        vAAADrwBlbxySQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAABaSURBVFhH7dKx
+        DYBADATBbQ1oCEQHH1EogjJADpygj/0EO9JFDs6yDJIk/cQCNOAoSnTNWb4Dz6BsscDdGVQlurk6g6qc
+        sUCc4Tuoypp/EA9R/YRTlkuSNNQL2PGblsDjKP0AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="btnMin9.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        vAAADrwBlbxySQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAABaSURBVFhH7dKx
+        DYBADATBbQ1oCEQHH1EogjJADpygj/0EO9JFDs6yDJIk/cQCNOAoSnTNWb4Dz6BsscDdGVQlurk6g6qc
+        sUCc4Tuoypp/EA9R/YRTlkuSNNQL2PGblsDjKP0AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="btnMin8.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        vAAADrwBlbxySQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAABaSURBVFhH7dKx
+        DYBADATBbQ1oCEQHH1EogjJADpygj/0EO9JFDs6yDJIk/cQCNOAoSnTNWb4Dz6BsscDdGVQlurk6g6qc
+        sUCc4Tuoypp/EA9R/YRTlkuSNNQL2PGblsDjKP0AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="btnMin7.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        vAAADrwBlbxySQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAABaSURBVFhH7dKx
+        DYBADATBbQ1oCEQHH1EogjJADpygj/0EO9JFDs6yDJIk/cQCNOAoSnTNWb4Dz6BsscDdGVQlurk6g6qc
+        sUCc4Tuoypp/EA9R/YRTlkuSNNQL2PGblsDjKP0AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="btnMin6.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        vAAADrwBlbxySQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAABaSURBVFhH7dKx
+        DYBADATBbQ1oCEQHH1EogjJADpygj/0EO9JFDs6yDJIk/cQCNOAoSnTNWb4Dz6BsscDdGVQlurk6g6qc
+        sUCc4Tuoypp/EA9R/YRTlkuSNNQL2PGblsDjKP0AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="btnMin5.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        vAAADrwBlbxySQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAABaSURBVFhH7dKx
+        DYBADATBbQ1oCEQHH1EogjJADpygj/0EO9JFDs6yDJIk/cQCNOAoSnTNWb4Dz6BsscDdGVQlurk6g6qc
+        sUCc4Tuoypp/EA9R/YRTlkuSNNQL2PGblsDjKP0AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="btnMin4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        vAAADrwBlbxySQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAABaSURBVFhH7dKx
+        DYBADATBbQ1oCEQHH1EogjJADpygj/0EO9JFDs6yDJIk/cQCNOAoSnTNWb4Dz6BsscDdGVQlurk6g6qc
+        sUCc4Tuoypp/EA9R/YRTlkuSNNQL2PGblsDjKP0AAAAASUVORK5CYII=
+</value>
+  </data>
+  <metadata name="timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <metadata name="timer2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>105, 17</value>
+  </metadata>
+  <metadata name="timer3.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>193, 17</value>
+  </metadata>
+  <metadata name="timer4.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>281, 17</value>
+  </metadata>
+  <metadata name="timer5.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>369, 17</value>
+  </metadata>
+  <metadata name="timer6.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>457, 17</value>
+  </metadata>
+  <metadata name="timer7.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>545, 17</value>
+  </metadata>
+  <metadata name="timer8.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>633, 17</value>
+  </metadata>
+  <metadata name="timer9.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>721, 17</value>
+  </metadata>
 </root>
